Changed wording, fixed icon alignment for project pages

--- a/projectPages/sketchar.css
+++ b/projectPages/sketchar.css
@@ -54,13 +54,6 @@ nav li {
   opacity: 0.5;
 }
 
-.icon {
-  position: relative;
-  display: block;
-  height: 40px;
-  width: 40px;
-}
-
 .container {
   position: relative;
   width: auto;
